--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header class="header">
         <div class="header-title">Español Fácil</div>
         <div class="header-nav">
-            <a href="#">Inicio</a>
-            <a href="#">Cursos</a>
-            <a href="#">Práctica</a> 
-            <a href="#">sobre</a>
+            <a href="#home">Inicio</a>
+            <a href="#courses">Cursos</a>
+            <a href="#practice">Práctica</a> 
+            <a href="#about">sobre</a>
         </div>
     </header>
 
@@ -80,10 +80,6 @@
             <p>Con métodos interactivos y contenido personalizado, te ayudamos a dominar el español.</p>
         </div>
     </section>
-
-    <footer class="footer">
-        <div class="copyright">@2024 español fácil</div>
-        <div class="contact">contact us:YouTube email facebook</div>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
